app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll automatically include all the stylesheets available in this directory
 * and any sub-directories. You're free to add application-wide styles to this file and they'll appear at
 * the top of the compiled file, but it's generally better to create a new file per style scope.
 *= require_self
 *= require_tree . 
 *= require welcome
 *= require screen
 *= require facebox
 *= require jquery.notifyBar
*/

$blueprint-grid-columns: 32;
$blueprint-grid-width: 20px;
$blueprint-grid-margin: 10px;

@import "blueprint/reset";
@import "blueprint";

@import "compass/css3";

@import url(http://fonts.googleapis.com/css?family=PT+Sans:400,700);

$sidebar-columns: 4;

body.common {
  font: {
    family: 'PT Sans', sans-serif;
    size: 12px;
  }

  a {
    color: #1d648d;
  }

  color: #726e6b;

  @include blueprint-debug;
  background: #f9f5e9;

  h2 {
    font-size: 14px;
    font-weight: bold;
    color: #826d5d;

    padding: {
      top:26px;
      bottom: 20px;
    }
  }

  h3 {
    font-size: 12px;
    font-weight: bold;
    color: #826d5d;

    padding: {
      top:20px;
      bottom: 15px;
    }
  }

  h1 {
    font-size: 18px;
    font-weight: bold;
    color: #834741;

    padding: {
      top:25px;
      bottom: 10px;
    }
  }
  .simple_form div.input {
    margin-bottom: 10px;
  }

  .simple_form label {
    float: left;
    width: 130px;
    text-align: right;
    margin: 2px 10px;
  }

  .simple_form input {
    &.text,
    &.title,
    &[type=email],
    &[type=text],
    &[type=password] {
      width: 200px;
    }
  }

  div.boolean, .simple_form input[type='submit'] {
    margin-left: 150px;
  }

  div.boolean label, label.collection_radio {
    float: none;
    margin: 0;
  }

  label.collection_radio {
    margin-right: 10px;
    vertical-align: -2px;
    margin-left:   2px;
  }

  .field_with_errors {
    background-color: #ff3333;
  }

  .simple_form .error {
    clear:   left;
    color:   black;
    display: block;
    margin-left: 150px;
    font-size:    12px;
  }

  .simple_form .hint {
    clear: left;
    margin-left: 150px;
    font-size:    12px;
    color: #555;
    display: block;
    font-style: italic;
  }

  input.radio {
    margin-right: 5px;
    vertical-align: -3px;
  }

  input.check_boxes {
    margin-left: 3px;
    vertical-align: -3px;
  }

  label.collection_check_boxes {
    float: none;
    margin: 0;
    vertical-align: -2px;
    margin-left:   2px;
  }
  .form {
    h2, .links {
      @include prepend(5);
    }

    .links {
      padding: {
        top: 20px;
        bottom: 20px;
      }
    }
  }
}

body.application {
  #container {
    @include container;
  }

  #header {
    @include column($blueprint-grid-columns);
  }

  #footer {
    @include prepend(8);
    @include column(24, true);
    margin: {
      top: 20px;
      bottom: 20px;
    }
  }

  #sidebar {
    @include column(6); 
  }

  #content {
    // background: #ff0000;
    @include column(26, true); 
    background: #fff;
    @include border-radius;

    padding: {
      bottom: 40px;
    }
  }

  #header {
    margin-top: 20px;
    #logo {
      @include column(6);
    }

    #stuff{
      @include prepend(2);
      @include column(10);
    }

    #account_links {
      @include column(9, true);
      @include prepend(4);
      @include append(1);
      text-align: right;

      .user_name {
        font-weight: bold;
        color: #826d5d;
      }

      .separator {
        padding: {
          left: 10px;
          right: 10px;
        }
      }

      .sign_out {
        margin-left: 20px;
      }
    }
  }
}

body#home {

  a.upload {
    display: block;
    width: 121px;
    height: 29px;
    background: url('/assets/upload-button.png');
  }
  a.upload:hover {
    background: url('/assets/upload-button-active.png');
  }

  #upload {
    display: none;
  }

  #facebox .content {
    width: 450px;
  }

  .books {
    @include prepend(1);

    .book {
      @include column(25, true);
      font-size: 11px;

      .title {
        @include prepend(1);
        @include column(24, true);
      }

      .total {
        margin-top: 10px;
        padding-top: 10px;
        width: 100px;
      }

      .months {
        h2 { @include prepend(1); }

        @include column(18);
        background: #f9f5ea;
        padding-bottom: 30px;
        position: relative;

        .month {
          h2 { padding-left: 0; }
          position: absolute;
          top: 0;
          right: 0;
          width: 180px;
          height: 100%;
          background: #e5ddc6;
          padding-left: 20px;

          .total {
            border-top: 1px dotted #a8a291;
          }
        }


        .month.last_six { background: #e5ddc6; h2 { color: #826d5d; } }
        .month { background: #d4e9ec; h2 { color: #118793; } }
      }

      .totals {
        @include prepend(1);
        @include column(6, true);

        .total {
          border-top: 1px dotted #e3e2e1;
        }
      }

    }
  }

  .barchart {
    float: left;
    width: 299px;
    font-size: 11px;

    .line {
      margin-bottom: 2px;

      @include clearfix;

      .label {
        text-align: right;
        width: 27px;
        float: left;
        padding: {
          top: 5px;
          right: 5px;
        }
      }
      .column {
        float: left;
        width: 1px;
        height: 25px;
      }

      .column { background: #90c7ce }
      .column.selected { background: #118793 }

      .value {
        float: left;
        padding: {
          left: 4px;
          top: 5px;
        }
      }
    }
  }
}

body#devise {
  #container {
    @include container;
    // @include showgrid;
  }
  #header, #footer {
    @include prepend(10);
    @include column(22, true);
    padding: {
      top: 20px;
      bottom: 20px;
    }
  }

  #content {
    @include column(14, true);
    @include prepend(9);
    @include append(9);
  }

  #box {
    background: #fff;
    @include border-radius;

    h2, .links {
      @include prepend(5);
    }

    .links {
      padding: {
        top: 20px;
        bottom: 20px;
      }
    }
  }
}


body#welcome {
  #container {
    @include container;
    margin-top: 40px;
  }

  #header {
    @include column(32, true);
    padding-bottom: 10px;

    #logo {
      @include column(9);
      @include prepend(1);
    }
    #links {
      @include column(21, true);
      @include append(1);
      text-align: right;
    }
  }

  #content {
    @include column(32, true);

    #links {
      @include column(10);
    }

    #intro {
      @include column(20, true);
      @include prepend(6);
      @include append(6);


      padding: {
        top: 40px;
        bottom: 30px;
      }

      text-align: center;

      background: #fff;

      .header {
        font-size: 23px;
        color: #826d5d;
      }

      .sign_up {
        margin-top: 30px;
        font-size: 23px;

        a {
          // background: #f9f5ea;
          padding: 5px 10px;
        }
      }
    }
  }
}

